# librarian

./: .env.example  .gitignore  README.md  README.zh.md  librarian.yaml  main.py  pyproject.toml
data/: librarian.db
src/api/: app.py
src/config/: __init__.py  configurable.py  loader.py  schema.py
src/db/: __init__.py  manager.py
src/git_manager/: __init__.py  exceptions.py  manager.py  tmp_manager.py
src/models/: __init__.py  file_io.py  skill.py
src/tools/: __init__.py  builtin.py
src/workers/: __init__.py  base.py  skill_deduplicator.py  skill_evaluator.py  skill_link_maintainer.py  skill_pruner.py  skill_router.py  skill_splitter.py  tool_guardian.py  tool_synthesizer.py
src/workflows/: __init__.py  human_review.py  scheduler.py  workflows.py
tests/unit/: test_api.py  test_builtin_tools.py  test_config.py  test_db.py  test_git_manager.py  test_human_review.py  test_scheduler.py  test_skill_model.py  test_workers.py  test_workflows.py
